k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: heart-disease-api-service
  labels:
    app: heart-disease-api
spec:
  selector:
    app: heart-disease-api
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer
  # For Minikube, change type to: NodePort
